# todo-catcher

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
scripts/installations/: setup.sh
src/todo_catcher/: catcher.py
src/utils/: logging.py  misc.py
test_case/: module1.py
test_case/class/: class1.py
